[package]
name = "HAL-Project"
version = "0.1.0"
edition = "2021"

[dependencies]
arduino-hal = { git = "https://github.com/Rahix/avr-hal", branch = "main", features = ["arduino-uno"] }
panic-halt = "0.2"

[profile.release]
codegen-units = 1
lto = true
debug = false
panic = "abort"
opt-level = "z"
strip = true

[profile.dev]
panic = "abort"
opt-level = "z"
